# portbook

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  cliff.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
assets/: app.js  index.html  style.css
src/: api.rs  cli.rs  engine.rs  lib.rs  main.rs  probe.rs  project.rs  redact.rs  scheduler.rs  state.rs  version.rs
src/cli/: explain.rs  render.rs  style.rs  watch.rs  width.rs
src/cli/tui/: app.rs  mod.rs  source.rs  ui.rs
src/discovery/: linux.rs  macos.rs  mod.rs
src/process/: linux.rs  macos.rs  mod.rs
tests/: security.rs
