[package]
name = "portbook"
version = "0.1.6"
edition = "2024"
description = "Local web dashboard that auto-discovers and labels HTTP dev services running on localhost ports."
repository = "https://github.com/a-grasso/portbook"
homepage = "https://github.com/a-grasso/portbook"
license = "MIT"
readme = "README.md"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
scraper = "0.20"
rust-embed = "8"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
terminal_size = "0.4"
anstyle = "1"
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
